# FASTX

./: Fastx.cabal  README.md
src/Fastx/: Convert.hs  Fasta.hs  Fastq.hs
tests/: ConvertTest.hs  FastaTest.hs  FastqTest.hs  test.fasta  test.fastq  test.hs
