cabal-version:      2.4
name:               Fastx
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elliot Bobrow
maintainer:         elliotgreybobrow@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

library
    exposed-modules:
        Fastx.Fasta
      , Fastx.Fastq
      , Fastx.Convert

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , parsec
      , directory
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite fasta-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          FastaTest.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.14.3.0
      , Fastx
      , tasty
      , tasty-hunit

test-suite fastq-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          FastqTest.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.14.3.0
      , Fastx
      , tasty
      , tasty-hunit

test-suite convert-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          ConvertTest.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.14.3.0
      , Fastx
      , tasty
      , tasty-hunit
